tests/transpiler/x/ocaml/for_map_collection.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let m = ref [("a", 1); ("b", 2)] in
  (try List.iter (fun (k, _) ->
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int k]));
    with Continue -> ()) !m with Break -> ())
